# Inverse-Emergence-Compiler

./: .gitignore  Cargo.toml  PLAN.md
.cargo/: config.toml
.github/workflows/: ci.yml
benchmarks/specs/: consensus.emerge  coverage.emerge  flocking.emerge  self_healing_ring.emerge
crates/agent-model/: Cargo.toml
crates/agent-model/src/: fst.rs  gcp.rs  interpreter.rs  lib.rs  topology.rs
crates/emergelang/: Cargo.toml
crates/emergelang/src/: ast.rs  compile.rs  etl.rs  grammar.pest  lib.rs  parser.rs
crates/iec-cli/: Cargo.toml
crates/iec-cli/src/: main.rs
crates/iec-cli/tests/: integration.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  simulation.rs
crates/synthesizer/: Cargo.toml
crates/synthesizer/src/: cegis.rs  enumerate.rs  lib.rs  properties.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  monitor.rs  statistical.rs
crates/wasm-sim/: Cargo.toml  index.html
crates/wasm-sim/src/: lib.rs
neural/: pyproject.toml
neural/src/: __init__.py  diff_etl_loss.py  gnn_synthesizer.py  rule_extraction.py  training.py
